<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingVertical="@dimen/padding_high">

    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tv_message"
        style="@style/TextView.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="@dimen/margin_high"
        android:text="@string/logout_confirmation_message"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_high"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dismiss"
            style="@style/button_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss" />

        <Button
            android:id="@+id/btn_logout"
            style="@style/button_red_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/logout" />
    </LinearLayout>
</LinearLayout>
