<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_high">



            <FrameLayout
                android:id="@+id/constraint_layout"
                android:layout_width="@dimen/photo_size_medium"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_16sdp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="@dimen/photo_size_small"
                    android:layout_height="@dimen/photo_size_small"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="Prfile image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_picture"
                    app:shapeAppearanceOverlay="@style/RoundedShapeAppearance" />


                <ImageView
                    android:id="@+id/edit_avatar"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center|end"
                    android:src="@drawable/ic_add_photo_white"
                    app:tint="@color/colorPrimary"
                    />

            </FrameLayout>


            <TextView
                style="@style/TextView.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/username"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_name"
                style="@style/text_input_style"
                android:layout_width="match_parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                style="@style/TextView.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/bio"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                style="@style/text_input_style"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_bio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>





            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                style="@style/button_primary"
                android:layout_marginVertical="@dimen/margin_high"
                android:padding="@dimen/padding_high"
                android:text="@string/save" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>